--- a/index.html
+++ b/index.html
@@ -3,45 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>Epic Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="header">
+        <h1>Welcome to my Projects</h1>
+    </div>
 
-    <main class="main-content">
-        <section class="hero">
-            <h2>Hello World!</h2>
-            <p>This is a simple website created with HTML and CSS.</p>
+    <div class="content">
+        <section class="card">
+            <h2>Test Card</h2>
+            <p>Test</p>
         </section>
-
-        <section class="features">
-            <div class="feature-card">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="feature-card">
-                <h3>Feature 2</h3>
-                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="feature-card">
-                <h3>Feature 3</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            </div>
+        <section class="card">
+            <h2>Card 2</h2>
+            <p>Test 2</p>
         </section>
-    </main>
-
-    <footer class="footer">
-        <p>&copy; 2024 My Website. All rights reserved.</p>
-    </footer>
+    </div>
+    <div class="footer">
+        <p>End</p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
